-Worked on responsve view for vendor listing and approval page and cleared the alignment issue in ITandHR ticketng open close page

--- a/HRMS/Content/z-style.css
+++ b/HRMS/Content/z-style.css
@@ -148,10 +148,16 @@ div.main-content {
 
 /* sidebar menu start */
 
-.sidebar .sidebar-dropdown .side-menubar-updown {
+.admin-ticket-main-menu .side-menubar-updown {
     display: inline-block;
     text-align: right;
     width: 32%;
+    font-size: 12px;
+}
+.admin-leave-main-menu .side-menubar-updown {
+    display: inline-block;
+    text-align: right;
+    width: 44%;
     font-size: 12px;
 }
 
@@ -3075,3 +3081,9 @@ input[type=checkbox], input[type=radio] {
 }
 
 
+.admin-itsupport-main-menu .side-menubar-updown {
+    display: inline-block;
+    text-align: right;
+    width: 28%;
+    font-size: 12px;
+}
